--- a/office_emp/emp_app/templates/all_emp.html
+++ b/office_emp/emp_app/templates/all_emp.html
@@ -1,61 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>all employee</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>All Employees</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(to right, #28a745, #218838);
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .card-container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      color: #000;
+    }
+    h1 {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+    .nav-buttons {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .table th, .table td {
+      vertical-align: middle;
+    }
+    .emp-img {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 2px solid #007bff;
+    }
+  </style>
 </head>
-<body class="bg-success>
-    <div class="container">
-        <h1>All Employee Details!</h1>
-        <hr>
-        <a class="btn btn-primary" href="/all_emp" role="button">View All Employee</a>
-        <a class="btn btn-primary" href="/add_emp" role="button">Add An Employee</a>
-        <a class="btn btn-primary" href="/remove_emp" role="button">Remove An Employee</a>
-        <a class="btn btn-primary" href="/filter_emp" role="button">Filter An Employee</a>
-        <hr>
+<body>
 
-        <table class="table table-warning table-striped">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Salary</th>
-                <th scope="col">Bonous</th>
-                <th scope="col">Phoneno.</th>
-                <th scope="col">Role</th>
-                <th scope="col">Department</th>
-                <th scope="col">location</th>
-                <th scope="col">HiredDate</th>
-              </tr>
-            </thead>
-            {% for emp in emps %}
-            <tbody>
-              <tr>
-                <th scope="row">{{emp.id}}</th>
-                <td>{{emp.first_name}}</td>
-                <td>{{emp.last_name}}</td>
-                <td>{{emp.salary}}</td>
-                <td>{{emp.bonous}}</td>
-                <td>{{emp.phone}}</td>
-                <td>{{emp.role.name}}</td>
-                <td>{{emp.dept.name}}</td>
-                <td>{{emp.dept.location}}</td>
-                <td>{{emp.hire_date}}</td>
-                
-              
-            </tbody>
-            {% endfor%}
-          </table>
-    
+<div class="container my-5">
+  <div class="card-container">
+    <h1>All Employee Details</h1>
+    <hr>
 
-
-
-
+    <div class="nav-buttons mb-4">
+      <a class="btn btn-primary m-1" href="/all_emp">View All Employees</a>
+      <a class="btn btn-success m-1" href="/add_emp">Add Employee</a>
+      <a class="btn btn-danger m-1" href="/remove_emp">Remove Employee</a>
+      <a class="btn btn-warning m-1 text-white" href="/filter_emp">Filter Employee</a>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <table class="table table-striped table-bordered align-middle">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Photo</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Salary</th>
+          <th scope="col">Bonus</th>
+          <th scope="col">Phone</th>
+          <th scope="col">Role</th>
+          <th scope="col">Department</th>
+          <th scope="col">Location</th>
+          <th scope="col">Hire Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for emp in emps %}
+        <tr>
+          <th scope="row">{{ emp.id }}</th>
+          <td><img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="emp-img" alt="Employee Photo"></td>
+          <td>{{ emp.first_name }}</td>
+          <td>{{ emp.last_name }}</td>
+          <td>{{ emp.salary }}</td>
+          <td>{{ emp.bonous }}</td>
+          <td>{{ emp.phone }}</td>
+          <td>{{ emp.role.name }}</td>
+          <td>{{ emp.dept.name }}</td>
+          <td>{{ emp.dept.location }}</td>
+          <td>{{ emp.hire_date }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
