--- a/office_emp/emp_app/templates/remove_emp.html
+++ b/office_emp/emp_app/templates/remove_emp.html
@@ -3,33 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>remove employee</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Remove Employee</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .employee-img {
+            max-width: 100%;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+        .container {
+            padding-top: 30px;
+        }
+    </style>
 </head>
-<body>
+<body class="bg-light">
     <div class="container">
-        <h1>Remove An Employee!</h1>
+        <h1 class="mb-3">Remove An Employee</h1>
         <hr>
-        <a class="btn btn-primary" href="/all_emp" role="button">View All Employee</a>
-        <a class="btn btn-primary" href="/add_emp" role="button">Add An Employee</a>
-        <a class="btn btn-primary" href="/remove_emp" role="button">Remove An Employee</a>
-        <a class="btn btn-primary" href="/filter_emp" role="button">Filter An Employee</a>
-        <hr>
+
+        <div class="mb-4">
+            <a class="btn btn-primary me-2" href="/all_emp">View All Employees</a>
+            <a class="btn btn-success me-2" href="/add_emp">Add An Employee</a>
+            <a class="btn btn-danger me-2" href="/remove_emp">Remove An Employee</a>
+            <a class="btn btn-secondary" href="/filter_emp">Filter Employees</a>
+        </div>
+
+        <!-- Image Section -->
+        <div class="mb-4">
+            <img src="https://img.freepik.com/free-vector/fired-concept-illustration_114360-2577.jpg" 
+                 alt="Remove Employee Illustration" 
+                 class="employee-img" style="width: 300px; height: auto;">
+        </div>
+
+        <!-- Dropdown to select employee -->
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" id="dropdown" aria-expanded="false">
-              Choose Employee To Be Remove
+            <button class="btn btn-outline-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" id="dropdown" aria-expanded="false">
+                Choose Employee To Remove
             </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              {% for emp in emps %}
-              <li><a class="dropdown-item" href="/remove_emp/{{emp.id}}">{{emp.first_name}} {{emp.last_name}}</a></li>
-              {% endfor %}
+            <ul class="dropdown-menu" aria-labelledby="dropdown">
+                {% for emp in emps %}
+                <li><a class="dropdown-item" href="/remove_emp/{{ emp.id }}">{{ emp.first_name }} {{ emp.last_name }}</a></li>
+                {% endfor %}
             </ul>
-          </div>
-
-
-
-
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
